@@ -2,53 +2,61 @@
            xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
            i18n_domain="eea">
 
-  <genericsetup:registerProfile
-      name="default"
-      title="EEA Design"
-      directory="profiles/default"
-      description='Extension profile for EEA Design'
-      provides="Products.GenericSetup.interfaces.EXTENSION" />
+    <genericsetup:registerProfile
+            name="default"
+            title="EEA Design"
+            directory="profiles/default"
+            description='Extension profile for EEA Design'
+            provides="Products.GenericSetup.interfaces.EXTENSION" />
 
-  <genericsetup:registerProfile
-      name="uninstall"
-      title="EEA Design uninstall profile"
-      directory="profiles/uninstall"
-      description='Uninstall extension profile for the "eea.design" Plone theme.'
-      provides="Products.GenericSetup.interfaces.EXTENSION" />
 
-  <genericsetup:importStep
-        name="eea.design.various"
-        title="EEA Design: Miscellaneous import steps"
-        description="Various import steps that are not handled by GS import/export handlers."
-        handler="eea.design.setuphandlers.setupVarious">
-    <depends name="skins"/>
-  </genericsetup:importStep>
+    <genericsetup:registerProfile
+            name="uninstall"
+            title="EEA Design uninstall profile"
+            directory="profiles/uninstall"
+            description='Uninstall extension profile for the "eea.design" Plone theme.'
+            provides="Products.GenericSetup.interfaces.EXTENSION" />
 
-  <genericsetup:registerProfile
-      name="upgrade74"
-      title="EEA Design upgrade profile for v7.4"
-      directory="profiles/upgrade74"
-      description='Upgrade profile for EEA Design'
-      provides="Products.GenericSetup.interfaces.EXTENSION" />
+    <genericsetup:importStep
+            name="eea.design.various"
+            title="EEA Design: Miscellaneous import steps"
+            description="Various import steps that are not handled by GS import/export handlers."
+            handler="eea.design.setuphandlers.setupVarious">
+        <depends name="skins"/>
+    </genericsetup:importStep>
 
-  <genericsetup:registerProfile
-      name="upgrade76"
-      title="EEA Design upgrade profile for v7.6"
-      directory="profiles/upgrade76"
-      description='Upgrade profile for EEA Design'
-      provides="Products.GenericSetup.interfaces.EXTENSION" />
+    <genericsetup:registerProfile
+            name="upgrade74"
+            title="EEA Design upgrade profile for v7.4"
+            directory="profiles/upgrade74"
+            description='Upgrade profile for EEA Design'
+            provides="Products.GenericSetup.interfaces.EXTENSION" />
 
-  <genericsetup:registerProfile
-      name="upgrade81"
-      title="EEA Design upgrade profile for v8.1"
-      directory="profiles/upgrade81"
-      description='Upgrade profile for EEA Design'
-      provides="Products.GenericSetup.interfaces.EXTENSION" />
+    <genericsetup:registerProfile
+            name="upgrade76"
+            title="EEA Design upgrade profile for v7.6"
+            directory="profiles/upgrade76"
+            description='Upgrade profile for EEA Design'
+            provides="Products.GenericSetup.interfaces.EXTENSION" />
 
-  <genericsetup:registerProfile
-      name="upgrade85"
-      title="EEA Design upgrade profile for v8.5"
-      directory="profiles/upgrade85"
-      description='Upgrade profile for EEA Design'
-      provides="Products.GenericSetup.interfaces.EXTENSION" />
+    <genericsetup:registerProfile
+            name="upgrade81"
+            title="EEA Design upgrade profile for v8.1"
+            directory="profiles/upgrade81"
+            description='Upgrade profile for EEA Design'
+            provides="Products.GenericSetup.interfaces.EXTENSION" />
+
+    <genericsetup:registerProfile
+            name="upgrade85"
+            title="EEA Design upgrade profile for v8.5"
+            directory="profiles/upgrade85"
+            description='Upgrade profile for EEA Design'
+            provides="Products.GenericSetup.interfaces.EXTENSION" />
+
+    <genericsetup:registerProfile
+            name="upgrade87"
+            title="EEA Design"
+            directory="profiles/upgrades/to_86"
+            description='EEA Design upgrade profile for v8.7'
+            provides="Products.GenericSetup.interfaces.EXTENSION" />
 </configure>
