@@ -1,0 +1,15 @@
+<?xml version="1.0"?>
+<!-- This file holds the setup configuration for the portal_css tool. -->
+
+<object name="portal_css">
+
+    <stylesheet title=""
+                id="eea-fonts.css"
+                media="screen" rel="stylesheet" rendering="link"
+                cacheable="True" compression="safe" cookable="True"
+                conditionalcomment=""
+                expression=""
+                insert-after="eea-base.css"
+            />
+
+</object>
