@@ -5,6 +5,9 @@ Changelog
 ----------------------
 * Change: Simplified data and maps frontpage.
   [demarant fixes #16735]
+* Upgrade step: Within "Plone > Site setup > Add-ons" click on
+  upgrade button available for eea.design
+  [ichimdav #15235]
 * Upgrade step: Within www/portal_tinymce/@@tinymce-controlpanel
    - Add the following TinyMCE style:
      - Mark text for presentation|span|markPresentationalText
